--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
